Add support for git based on Jeffrey C. Ollie's patch

--- a/bin/control_rancid.in
+++ b/bin/control_rancid.in
@@ -132,7 +132,7 @@ SENDMAIL=${SENDMAIL:=sendmail};
 
 # RCS system
 RCSSYS=${RCSSYS:=cvs};
-if [ $RCSSYS != "cvs" -a $RCSSYS != "svn" ] ; then
+if [ $RCSSYS != "cvs" -a $RCSSYS != "svn" -a $RCSSYS != "git" ] ; then
     echo "$RCSSYS is not a valid value for RCSSYS. See rancid.conf(5)." >&2
     exit 1
 fi
@@ -171,23 +171,44 @@ if [ ! -d $DIR ] ; then
 fi
 cd $DIR
 
-# create a .cvsignore
-if [ ! -f .cvsignore ] ; then
-    rm -f .cvsignore
-    cat >.cvsignore <<EOF
+# create a .cvsignore/.gitignore
+case $RCSSYS in
+git )
+    if [ ! -f .gitignore ] ; then
+	rm -rf .gitignore
+	cat > .gitignore <<EOF
+routers.all
+routers.down
+routers.up
+EOF
+	git add .gitignore
+    fi
+    if [ ! -f configs/.gitignore ] ; then
+	rm -rf configs/.gitignore
+	cat > configs/.gitignore <<EOF
+*.new
+*.raw
+EOF
+	git add configs/.gitignore
+    fi
+    ;;
+cvs | svn )
+    if [ ! -f .cvsignore ] ; then
+	rm -rf .cvsignore
+	cat >.cvsignore <<EOF
 .cvsignore
 routers.all
 routers.down
 routers.up
 EOF
-    case $RCSSYS in
-    svn )
+    if [ $RCSSYS = svn ] ; then
 	svn propset svn:ignore -F .cvsignore .
 	svn update .
 	svn commit -m 'set svn:ignores' .
-	;;
-    esac
-fi
+	fi
+    fi
+    ;;
+esac
 
 # if there is a rancid.conf, check if it needs to be added to the RCS
 if [ -f rancid.conf ] ; then
@@ -197,28 +218,38 @@ if [ -f rancid.conf ] ; then
 	if [ $? -eq 0 ] ; then LN=1; else LN=0; fi
 	;;
     svn )
-	LN=`svn ls rancid.conf | wc -l`
+	LN=`(svn ls rancid.conf | wc -l) 2>/dev/null`
 	;;
+    git )
+	git status -s rancid.conf | grep '^?'
+        ;;
     esac
     if [ $LN -eq 0 ] ; then
 	$RCSSYS add rancid.conf
     fi
 fi
 
-# do cvs update of router.db in case anyone has fiddled.
+# do RCS update of router.db in case anyone has fiddled.
 case $RCSSYS in
-cvs svn )
+git )
+    # git doesnt make this easy.  XXX
+    #git fetch > $TMP 2>&1
+    #git checkout FETCH_HEAD -- router.db
+    #grep "^C" $TMP > /dev/null	# XXX right for git?
+    touch $TMP
+    ;;
+cvs | svn )
     $RCSSYS update router.db > $TMP 2>&1
+    grep "^C" $TMP > /dev/null
+    if [ $? -eq 0 ] ; then
+	echo "There were $RCSSYS conflicts during update."
+	echo ""
+	cat $TMP
+	rm -f $TMP
+	exit 1
+    fi
     ;;
 esac
-grep "^C" $TMP > /dev/null
-if [ $? -eq 0 ] ; then
-    echo "There were $RCSSYS conflicts during update."
-    echo ""
-    cat $TMP
-    rm -f $TMP
-    exit 1
-fi
 rm -f $TMP
 
 if [ ! -f $DIR/router.db ] ; then
@@ -335,8 +366,8 @@ if [ $RALL -ne 0 -o $RDOWN -ne 0 -o $RUP -ne 0 ] ; then
 	cvs )
 	    cvs add -ko $router
 	    ;;
-	svn )
-	    svn add $router
+	svn | git )
+	    $RCSSYS add $router
 	    ;;
 	esac
 	$RCSSYS commit -m 'new router' $router
@@ -367,45 +398,71 @@ for router in `cut -d\; -f1 ../routers.up` ; do
     case $RCSSYS in
     cvs )
 	cvs status $router | grep -i 'status: unknown' > /dev/null 2>&1
+	if [ $? -eq 0 ] ; then
+	    touch $router
+	    cvs add -ko $router
+	    cvs commit -m 'new router' $router
+	    echo "$RCSSYS added missing router $router"
+	fi
 	;;
     svn )
 	if [ ! -e $router ] ; then
 	    touch $router
 	fi
 	svn status $router | grep '^?' > /dev/null 2>&1
+	if [ $? -eq 0 ] ; then
+	    svn add $router
+	    svn commit -m 'new router' $router
+	    echo "$RCSSYS added missing router $router"
+	fi
+        ;;
+    git )
+	if [ ! -e $router ] ; then
+	    touch $router
+	fi
+	git status $router | grep '^?' > /dev/null 2>&1
+	if [ $? -eq 0 ] ; then
+	    git add $router
+	    git commit -m 'new router' $router
+	    echo "$RCSSYS added missing router $router"
+	fi
         ;;
     esac
-    if [ $? -eq 0 ] ; then
-	touch $router
-	case $RCSSYS in
-	cvs )
-	    cvs add -ko $router
-	    ;;
-	svn )
-	    svn add $router
-	    ;;
-	esac
-	echo "$RCSSYS added missing router $router"
-    fi
 done
 echo
 # delete configs from RCS for routers not listed in routers.up.
-for router in `find . \( -name \*.new -prune -o -name CVS -prune -o -name .svn -prune \) -o -type f -print | sed -e 's/^.\///'` ; do
+for router in `find . \( -name \*.new -prune -o -name CVS -prune -o -name .svn -prune -o -name .gitignore -prune \) -o -type f -print | sed -e 's/^.\///'` ; do
     grep -i "^$router\;" ../router.db > /dev/null 2>&1
     if [ $? -eq 1 ] ; then
 	rm -f $router
-	$RCSSYS delete $router
-	$RCSSYS commit -m 'deleted router' $router
+	case $RCSSYS in
+	cvs | svn )
+	    $RCSSYS delete $router
+	    $RCSSYS commit -m "deleted router $router" $router
+	    ;;
+	git )
+	    git rm $router
+	    git commit -m "deleted router $router" $router
+	    ;;
+	esac
 	echo "Deleted $router"
     fi
 done
 cd $DIR
 
 # no routers, empty list or all 'down'
-if [ ! -s routers.up ]
-then
+if [ ! -s routers.up ] ; then
     # commit router.db
-    $RCSSYS commit -m updates router.db
+    message="updates of group $GROUP"
+    case $RCSSYS in
+    cvs | svn )
+	$RCSSYS commit -m "$message" router.db
+	;;
+    git )
+	git add router.db
+	git commit -m "$message" router.db
+	;;
+    esac
     exit;
 fi
 
@@ -470,14 +527,8 @@ echo
 
 # Make sure that no empty/truncated configs are accepted.  The remainder are
 # renamed from device_name.new -> device_name.
-for router in `cat $devlistfile`
+for router in `cat $devlistfile | cut -d\; -f1`
 do
-    OFS=$IFS
-    IFS=';'
-    set $router
-    IFS=$OFS
-    router=$1;
-
     if [ ! -s $router.new ] ; then
 	rm -f $router.new
     else
@@ -512,6 +563,9 @@ cvs )
 svn )
     svn diff | sed -e '/^+++ /d' -e 's/^\([-+ ]\)/\1 /' >$TMP.diff
     ;;
+git )
+    git diff | sed -e '/^+++ /d' -e 's/^\([-+ ]\)/\1 /' >$TMP.diff
+    ;;
 esac
 
 if [ $alt_mailrcpt -eq 1 ] ; then
@@ -520,17 +574,26 @@ else
     subject="router config diffs"
 fi
 if [ "X$device" != "X" ] ; then
-    $RCSSYS commit -m "updates - courtesy of $mailrcpt"
+    $RCSSYS commit -m "updates - courtesy of $mailrcpt" $device
     subject="$GROUP/$device $subject"
 else
-    $RCSSYS commit -m updates
+    if [ $RCSSYS = git ] ; then
+	$RCSSYS commit -am updates
+    else
+	$RCSSYS commit -m updates
+    fi
     subject="$GROUP $subject"
 fi
 
 # working-directory maintenance
-if [ $RCSSYS = svn ] ; then
+case $RCSSYS in
+svn )
     svn cleanup
-fi
+    ;;
+git )
+    git push
+    ;;
+esac
 
 # Mail out the diffs (if there are any).
 if [ -s $TMP.diff ] ; then
