--- a/rancid/etc/rancid.conf.sample.in
+++ b/rancid/etc/rancid.conf.sample.in
@@ -104,11 +104,11 @@ RCSSYS=@RCSSYS@; export RCSSYS
 # appended to recipients specified in rancid-run's -m option.
 #MAILDOMAIN="@example.com"; export MAILDOMAIN
 #
-# By default, rancid mail is marked with precedence "bulk".  This may be
-# changed by setting the MAILHEADERS variable; for example no header by setting
-# it to "" or adding X- style headers.  Individual headers must be separated
-# by a \n.
-#MAILHEADERS="Precedence: bulk"; export MAILHEADERS
+# By default, rancid mail is marked with precedence "bulk" and etc, as in the
+# example.  This may be changed by setting the MAILHEADERS variable; for
+# example no header by setting it to "" or adding X- style headers.  Individual
+# headers must be separated by a \n.
+#MAILHEADERS="Precedence: bulk\nAuto-submitted: auto-generated\nX-Auto-Response-Suppress: All"; export MAILHEADERS
 #
 # Additional options for sendmail(8).
 #MAILOPTS="-f bounces.go.here@example.com"; export MAILOPTS
