--- a/rancid/bin/wlogin.in
+++ b/rancid/bin/wlogin.in
@@ -650,6 +650,15 @@ proc run_commands { prompt command } {
 							}
 						  exp_continue
 						}
+	    -re "^Press Enter to continue\.\.\.\[^\n\r]*"		{
+						  send "\r"
+						  exp_continue }
+	    -re "^Press Enter to continue or \[^\n\r]* abort"	{
+						  send "\r"
+						  exp_continue }
+	    -re "^--More or \[^\n\r]* abort"	{
+						  send " "
+						  exp_continue }
 	    -re "^ *--More--\[^\n\r]*"		{
 						  send " "
 						  exp_continue }
