--- a/bin/tlogin.in
+++ b/bin/tlogin.in
@@ -72,6 +72,8 @@ set do_passwd 1
 set do_enapasswd 1
 # Sometimes routers take awhile to answer (the default is 10 sec)
 set timeoutdflt 45
+# Some CLIs having problems if we write too fast (Extreme, PIX, Cat)
+set send_human {.2 .1 .4 .2 1}
 # attempt at platform switching.
 set platform ""
 
