--- a/rancid/bin/lg.cgi.in
+++ b/rancid/bin/lg.cgi.in
@@ -177,7 +177,7 @@ sub readrouters
 		    while (<RTR>) {
 			next if (/^\s*(#|$)/);
 			# fqdn:mfg:state
-			@record = split('\:', $_);
+			@record = split('\;', $_);
 			next if ($record[2] !~ /up/i || $record[1] !~ /(cisco|foundry|juniper)/);
 			push(@rtrlist, join(':', ($record[0], $record[1])));
 			$rtrlabels{join(':', ($record[0], $record[1]))} = $record[0];
@@ -194,7 +194,7 @@ sub readrouters
 	    while (<RTR>) {
 		next if (/^\s*(#|$)/);
 		# fqdn:mfg:state
-		@record = split('\:', $_);
+		@record = split('\;', $_);
 		next if ($record[2] !~ /up/i || $record[1] !~ /(cisco|foundry|juniper)/);
 		push(@rtrlist, join(':', ($record[0], $record[1])));
 		$rtrlabels{join(':', ($record[0], $record[1]))} = $record[0];
