--- a/rancid/lib/ios.pm.in
+++ b/rancid/lib/ios.pm.in
@@ -1976,7 +1976,7 @@ sub WriteTerm {
 	    while (<$INPUT>) {
 		tr/\015//d;
 		last if (/^$prompt/ || ! /^ /);
-		next if (/(rx|tx)speed \d+/);
+		next if (/\s*(rx|tx)speed \d+/);
 		$_ = "$1 <removed>" if (/^(\s+password \d+) /);
 		ProcessHistory("LINE","keysort","$key","$_");
 	    }
