--- a/lib/foundry.pm.in
+++ b/lib/foundry.pm.in
@@ -174,7 +174,7 @@ sub ShowChassis {
 	if (/THERMAL PLANE/) {
 	    $skip = 1;
 	}
-	if (/temperature:/i) {
+	if (/(pressure|altitude|temperature):/i) {
 	    $skip = 1;
 	}
 	s/(Fan \d+ \S+), speed .*/$1/;
